@@ -165,33 +165,6 @@ void reset_cluster_map(udefrag_job_parameters *jp)
 }
 
 /**
- * @brief Redraws all temporary system space as free.
- * @note Intended for use from release_temp_space_regions.
- */
-void redraw_all_temporary_system_space_as_free(udefrag_job_parameters *jp)
-{
-    ULONGLONG i;
-    ULONGLONG n;
-    
-    if(jp == NULL)
-        return;
-    
-    if(jp->cluster_map.array == NULL)
-        return;
-
-    for(i = 0; i < jp->cluster_map.map_size; i++){
-        n = jp->cluster_map.array[i][TEMPORARY_SYSTEM_SPACE];
-        if(n){
-            jp->cluster_map.array[i][TEMPORARY_SYSTEM_SPACE] = 0;
-            jp->cluster_map.array[i][FREE_SPACE] += n;
-        }
-    }
-
-    if(jp->progress_router)
-        jp->progress_router(jp); /* redraw map */
-}
-
-/**
  * @brief colorize_map_region helper.
  */
 static void colorize_system_or_free_region(udefrag_job_parameters *jp,
