@@ -62,7 +62,6 @@ COLORREF colors[NUM_OF_SPACE_STATES] =
     RGB(255,255,0),RGB(238,221,0),  /* directories */
     RGB(185,185,0),RGB(93,93,0),    /* compressed */
     RGB(211,0,255),RGB(128,0,128),  /* mft zone; mft itself */
-    RGB(0,255,255)                  /* temporary system */
 };
 HBRUSH hBrushes[NUM_OF_SPACE_STATES] = { NULL };
 
